--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.top-buffer { margin-top:90px; }
+
+.nav-pills li {
+  margin-top: 10px;
+  margin-right: 10px;
+}
+/*body {*/
+  /*font-family: "Comic Sans MS", "Comic Sans", cursive;*/
+  /*font-weight: 500;*/
+  /*background-color: white;*/
+  /*text-rendering: optimizeLegibility;*/
+/*}*/
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
+}
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
+  color: white;
+}
+
+.wbdv-lessons {
+  background-color: black;
+}
+
+.header {
+  background-color: dimgrey;
+}
+
+.longcol {
+  height: 1000px;
+}
+
+.modulerow {
+  background-color: lightgray;
+}
