--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,11 @@ h2 {
 .modules {
   color: red
 }
+
+.logo {
+  color: white;
+  font-size: x-large;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
+}
